--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "commonjs",
+    "rootDir": "..",                          // Projekt-Root, da kein /src existiert
+    "outDir": "../dist",                      // Ausgabe in dist/
     "strict": true,
-    "sourceMap": true,
-    "outDir": "../dist",
-    "rootDir": "../",
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "resolveJsonModule": true,
+    "sourceMap": true
   },
-  "include": ["../**/*.ts"],
-  "exclude": ["../node_modules"]
+  "include": ["../**/*.ts"],                  // Alle TS-Dateien im Projekt (außer dist/node_modules)
+  "exclude": ["../node_modules", "../dist"]
 }
+
 
