--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "..",                          // Projekt-Root, da kein /src existiert
-    "outDir": "../dist",                      // Ausgabe in dist/
+    "module": "NodeNext",
+    "outDir": "./dist",
+    "rootDir": "./",        // Ausgabe in dist/
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -12,7 +12,7 @@
     "sourceMap": true
   },
   "include": ["../**/*.ts"],                  // Alle TS-Dateien im Projekt (außer dist/node_modules)
-  "exclude": ["../node_modules", "../dist"]
+  "exclude": ["./node_modules", "../dist"]
 }
 
 
