--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node dist/httpServer.js",
-    "build": "tsc"
+    "build": "tsc && cp -r certs dist/"
   },
   "keywords": [],
   "author": "",
